--- a/app/views/recipes/index.html.erb
+++ b/app/views/recipes/index.html.erb
@@ -9,3 +9,5 @@
     <li><%= link_to '新規登録', new_user_registration_path, class: "sign-up" %></li>
   <% end %>
 </ul>
+
+<%= link_to '料理を投稿する', new_recipe_path %>
