--- a/app/views/recipes/new.html.erb
+++ b/app/views/recipes/new.html.erb
@@ -1,1 +1,27 @@
 <h1>投稿ページ</h1>
+
+<h2> 料理を投稿する</h2>
+<%= form_with model: @recipe, local: true do |f| %>
+  <%# レシピのフォーム %>
+  <div>
+    <%= f.label :recipe_title, "料理の名前" %>
+    <%= f.text_field :recipe_title %>
+  </div>
+  <div>
+    <%= f.label :image, "料理の写真" %>
+    <%= f.file_field :image, id:"item-image" %>
+  </div>
+  <div>
+    <%= f.label :caption, "料理の説明" %>
+    <%= f.text_field :caption %>
+  </div>
+  <div>
+    <%= f.label :cooking_time, "調理時間(分)" %>
+    <%= f.text_field :cooking_time %>
+  </div>
+  <%# ここまで %>
+
+  <%= f.submit "投稿する" %>
+<% end %>
+
+<br><br><%= link_to "投稿せずにトップページへ戻る", root_path %>
