食材投稿用のフォームを追加

--- a/app/views/recipes/new.html.erb
+++ b/app/views/recipes/new.html.erb
@@ -2,7 +2,6 @@
 
 <h2> 料理を投稿する</h2>
 <%= form_with model: @recipe_form, url: recipes_path, method: :post, local: true do |f| %>
-  <%# レシピのフォーム %>
   <div>
     <%= f.label :recipe_title, "料理の名前" %>
     <%= f.text_field :recipe_title %>
@@ -19,7 +18,11 @@
     <%= f.label :cooking_time, "調理時間(分)" %>
     <%= f.text_field :cooking_time %>
   </div>
-  <%# ここまで %>
+
+  <div>
+    <%= f.label :ingredient_name, "使用する食材" %>
+    <%= f.text_field :ingredient_name %>
+  </div>
 
   <%= f.submit "投稿する" %>
 <% end %>
