調味料保存機能を実装

--- a/app/views/recipes/new.html.erb
+++ b/app/views/recipes/new.html.erb
@@ -24,6 +24,11 @@
     <%= f.text_field :ingredient_name %>
   </div>
 
+  <div>
+    <%= f.label :ingredient_name, "使用する調味料" %>
+    <%= f.text_field :ingredient_name %>
+  </div>
+
   <%= f.submit "投稿する" %>
 <% end %>
 
