フォームを修正

--- a/app/views/recipes/new.html.erb
+++ b/app/views/recipes/new.html.erb
@@ -25,8 +25,8 @@
   </div>
 
   <div>
-    <%= f.label :ingredient_name, "使用する調味料" %>
-    <%= f.text_field :ingredient_name %>
+    <%= f.label :seasoning_name, "使用する調味料" %>
+    <%= f.text_field :seasoning_name %>
   </div>
 
   <%= f.submit "投稿する" %>
