手順を保存する機能

--- a/app/views/recipes/new.html.erb
+++ b/app/views/recipes/new.html.erb
@@ -29,6 +29,11 @@
     <%= f.text_field :seasoning_name %>
   </div>
 
+  <div>
+    <%= f.label :step, "手順" %>
+    <%= f.text_area :step %>
+  </div>
+
   <%= f.submit "投稿する" %>
 <% end %>
 
