--- a/app/views/recipes/index.html.erb
+++ b/app/views/recipes/index.html.erb
@@ -12,8 +12,8 @@
 
 <% @recipes.each do |recipe| %>
   <div>投稿者：<%= recipe.user.name %></div>
-  <div>料理の名前：<%= link_to recipe.recipe_title, "#" %></div>
-  <div><%= link_to image_tag(recipe.image), "#" %></div>
+  <div>料理の名前：<%= link_to recipe.recipe_title, recipe_path(recipe.id) %></div>
+  <div><%= link_to image_tag(recipe.image), recipe_path(recipe.id) %></div>
   <div>料理の説明：<%= recipe.caption %></div>
   <div>調理時間：<%= recipe.cooking_time %>分</div><br>
 <% end %>
