詳細ページで各情報を表示する機能

--- a/app/views/recipes/show.html.erb
+++ b/app/views/recipes/show.html.erb
@@ -1,1 +1,23 @@
 <h1>詳細ページ</h1>
+
+
+<div>投稿者：<%= @recipe.user.name %></div>
+<div>料理の名前：<%= @recipe.recipe_title %></div>
+<div><%= image_tag @recipe.image %></div>
+<div>料理の説明：<%= @recipe.caption %></div>
+<div>調理時間：<%= @recipe.cooking_time %>分</div><br>
+<div>
+  <% @ingredients.each do |ingredient| %>
+    材料：　<%= ingredient.ingredient_name %></div>
+  <% end %>
+</div>
+<div>
+  <% @seasonings.each do |seasoning| %>
+    調味料：　<%= seasoning.seasoning_name %></div>
+  <% end %>
+</div>
+<div>
+  <% @procedures.each do |procedure| %>
+    手順：　<%= procedure.step %></div>
+  <% end %>
+</div>
