編集ページへのリンクを追加

--- a/app/views/recipes/show.html.erb
+++ b/app/views/recipes/show.html.erb
@@ -21,7 +21,15 @@
     手順：　<%= procedure.step %></div>
   <% end %>
 </div>
-<br>
+
+
+<% if user_signed_in? %> 
+  <% if current_user.id == @recipe.user_id %>
+    <%= link_to "編集する", edit_recipe_path(@recipe.id), method: :get %><br>
+    <%= link_to "削除する", "#", method: :delete %>
+  <% end %>
+<% end %>
+<br><br>
 
 <div>
   <%= link_to 'トップページに戻る', root_path %>
