--- a/app/views/recipes/new.html.erb
+++ b/app/views/recipes/new.html.erb
@@ -31,7 +31,7 @@
 
   <div>
     <%= f.label :step, "手順" %>
-    <%= f.text_area :step %>
+    <%= f.text_field :step %>
   </div>
 
   <%= f.submit "投稿する" %>
