--- a/app/views/recipes/new.html.erb
+++ b/app/views/recipes/new.html.erb
@@ -11,7 +11,7 @@
     <%= f.file_field :image, id:"item-image" %>
   </div>
   <div>
-    <%= f.label :caption, "料理の説明" %>
+    <%= f.label :caption, "説明文" %>
     <%= f.text_field :caption %>
   </div>
   <div>
