--- a/app/views/recipes/index.html.erb
+++ b/app/views/recipes/index.html.erb
@@ -1,23 +1,19 @@
-<h1>トップページ</h1>
+<div class = "header">
+  <%= render "header" %>
+</div>
 
-<ul class='lists-right'>
-  <% if user_signed_in? %>
-    <li><%= link_to current_user.name, "#", class: "user-name" %></li> 
-    <li><%= link_to 'ログアウト', destroy_user_session_path, method: :delete, class: "logout" %></li> 
-  <% else %>
-    <li><%= link_to 'ログイン', new_user_session_path, class: "login" %></li>
-    <li><%= link_to '新規登録', new_user_registration_path, class: "sign-up" %></li>
+<div class = "recipe">
+  <% @recipes.each do |recipe| %>
+    <div class = "recipe-content">
+      <div class = "user-name">投稿者：<%= recipe.user.name %></div>
+      <div class = "recipe-name">料理の名前：<%= link_to recipe.recipe_title, recipe_path(recipe.id) %></div>
+      <div class = "recipe-image"><%= link_to image_tag(recipe.image), recipe_path(recipe.id) %></div>
+      <div class = "recipe-caption">説明文：<%= recipe.caption %></div>
+      <div class = "recipe-cooking-time">調理時間：<%= recipe.cooking_time %>分</div><br>
+    </div>
   <% end %>
-</ul>
-
-<% @recipes.each do |recipe| %>
-  <div>投稿者：<%= recipe.user.name %></div>
-  <div>料理の名前：<%= link_to recipe.recipe_title, recipe_path(recipe.id) %></div>
-  <div><%= link_to image_tag(recipe.image), recipe_path(recipe.id) %></div>
-  <div>説明文：<%= recipe.caption %></div>
-  <div>調理時間：<%= recipe.cooking_time %>分</div><br>
-<% end %>
+</div>
 
 <% if user_signed_in? %>
-  <br><%= link_to '料理を投稿する', new_recipe_path %>
+  <br><%= link_to '投稿ページへ', new_recipe_path, class: "post-btn" %>
 <% end %>
