--- a/app/views/recipes/new.html.erb
+++ b/app/views/recipes/new.html.erb
@@ -1,4 +1,6 @@
-<h1>投稿ページ</h1>
+<div class = "header">
+  <%= render "subheader" %>
+</div>
 
 <h2> 料理を投稿する</h2>
 <%= form_with model: @recipe_form, url: recipes_path, method: :post, local: true do |f| %>
@@ -20,12 +22,12 @@
   </div>
 
   <div>
-    <%= f.label :ingredient_name, "使用する食材" %>
+    <%= f.label :ingredient_name, "食材" %>
     <%= f.text_field :ingredient_name %>
   </div>
 
   <div>
-    <%= f.label :seasoning_name, "使用する調味料" %>
+    <%= f.label :seasoning_name, "調味料" %>
     <%= f.text_field :seasoning_name %>
   </div>
 
@@ -37,4 +39,4 @@
   <%= f.submit "投稿する" %>
 <% end %>
 
-<br><br><%= link_to "投稿せずにトップページへ戻る", root_path %>
+<br><br><%= link_to "トップページへ戻る", root_path, class: "root-btn" %>
